--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,22 +1,30 @@
 {
 	"name": "C# with CSharpFritz",
 	"dockerComposeFile": [
-		"../docker-compose.yml",
+		"../docker-compose.yml"
 	],
 	"shutdownAction": "stopCompose",
 	"service": "notebook",
-	"workspaceFolder": "/home/jovyan/notebooks/",
-	"settings": {
-		"terminal.integrated.shell.linux": "/bin/bash"
-	},
-	"extensions": [
-		"ms-dotnettools.csharp",
-		"ms-python.python",
-		"donjayamanne.jupyter",
-		"yzhang.markdown-all-in-one",
-		"ms-dotnettools.dotnet-interactive-vscode",
-		"streetsidesoftware.code-spell-checker"
-	],
+	"workspaceFolder": "/home/layla/notebooks/",
+	"customizations": {
+		"settings": {
+			"terminal.integrated.shell.linux": "/bin/bash"
+		},
+		"extensions": [
+			
+		],
+		"vscode": {
+			"extensions": [
+				"ms-dotnettools.csharp",
+				"ms-python.python",
+				"donjayamanne.jupyter",
+				"yzhang.markdown-all-in-one",
+				"ms-dotnettools.dotnet-interactive-vscode",
+				"streetsidesoftware.code-spell-checker",
+				"vim.vim"
+			]
+		}
+	}
 	// "mounts": [
 	// 	"source=${localWorkspaceFolder}/notebooks,target=/home/jovyan/notebooks/,type=bind,consistency=cached"
 	// ]
